Add simple series and binoms

--- a/formulario/formulario.tex
+++ b/formulario/formulario.tex
@@ -1,21 +1,19 @@
 \documentclass{article}
     % General document formatting 
-    \usepackage[margin=0.7in]{geometry}
+    \usepackage[margin=0.5in]{geometry}
     \usepackage[parfill]{parskip}
     \usepackage[utf8]{inputenc}
     \usepackage{subfiles}
     \usepackage{textgreek}
     \usepackage{multicol}
+    \usepackage{amsmath}
 
 \begin{document}
 % Put your text here
-This is starter text.
+Formulario generico di Analisi e Geometria
 
- 
-\section{Calculus}
- \subfile{sections/calculus}
+\subfile{sections/calculus}
 
-\section{Other}
 \subfile{sections/other}
 
 \end{document} 
