--- a/formulario/sections/calculus.tex
+++ b/formulario/sections/calculus.tex
@@ -1,6 +1,37 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../formulario.tex]{subfiles}
     
 \begin{document}
-\[ \sum_{k=1}^n k^2 = \frac{1}{2} n (n+1).\]
-\[ \sum_{k=1}^n k^2 = \frac{1}{2} n (n+1).\]
+
+\section{Formula del binomio}
+\begin{multicols}{3}
+
+\[ \binom{n}{k} = \frac{n!}{k!(n-k)!} \]
+
+\[ \binom{n}{k} = \binom{n}{n-k} \]
+
+\[ \binom{n}{k} + \binom{n}{k-1} = \binom{n+1}{k} \]
+
+\end{multicols}
+
+\section{Serie}	
+\begin{multicols}{3}
+	
+\[ \sum_{k=1}^n k = \frac{n(n+1)}{2} \]
+
+\[ \sum_{k=1}^n (2k-1) = n^2 \]
+
+\[ \sum_{k=1}^n k^2 = \frac{n(n+1)(2n+1)}{6} \]
+
+\[ \sum_{k=1}^n k^3 = \frac{n^2(n+1)^2}{4} \]
+
+\[
+\sum_{k=0}^{n}q^k = \begin{cases}
+                         (n+1), & \text{for } q=1\\
+                         \frac{1-q^{(n+1)}}{1-q}, & \text{for } q\neq1
+                    \end{cases}
+\]
+	
+\end{multicols}
+
+
 \end{document}
