--- a/formulario/sections/other.tex
+++ b/formulario/sections/other.tex
@@ -1,11 +1,11 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../formulario.tex]{subfiles}
     
 \begin{document}
 
-\section{alphabet}
+\section{Other}
 Alfabeto Greco
 
-\begin{multicols}{2}
+\begin{multicols}{3}
 \begin{tabbing}
 \hspace{2em} \= \hspace{3em} \= $N$ = Yet another statement \= \kill
 
