Upgrade Johan Wevers formularies to compile with latest latex

--- a/Mathematics_Formulary_by_Joahn_Wevers/math.tex
+++ b/Mathematics_Formulary_by_Joahn_Wevers/math.tex
@@ -1,6 +1,18 @@
 % $Id: math.tex,v 2.13 2013/09/01 21:18:54 johanw Exp johanw $ 
 \mag=1000
-\documentstyle[a4wide,fancyheadings,twoside]{report}
+\documentclass[a4paper,fancyheadings,twoside]{report}
+	\usepackage{latexsym}
+	\usepackage{color}
+	\usepackage{hyperref}
+
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	urlcolor=red,
+	linktoc=all
+}
+
+
 \parindent 0pt
 
 \voffset 0mm
@@ -9,11 +21,94 @@
 \evensidemargin 0mm
 \textwidth 16.1925cm
 
-\setlength{\headrulewidth}{0.5pt}
-\setlength{\footrulewidth}{0.5pt}
 \unitlength 1mm
 
 \makeatletter
+
+
+% fancyheadings.sty
+
+\def\lhead{\@ifnextchar[{\@xlhead}{\@ylhead}}
+\def\@xlhead[#1]#2{\gdef\@elhead{#1}\gdef\@olhead{#2}}
+\def\@ylhead#1{\gdef\@elhead{#1}\gdef\@olhead{#1}}
+
+\def\chead{\@ifnextchar[{\@xchead}{\@ychead}}
+\def\@xchead[#1]#2{\gdef\@echead{#1}\gdef\@ochead{#2}}
+\def\@ychead#1{\gdef\@echead{#1}\gdef\@ochead{#1}}
+
+\def\rhead{\@ifnextchar[{\@xrhead}{\@yrhead}}
+\def\@xrhead[#1]#2{\gdef\@erhead{#1}\gdef\@orhead{#2}}
+\def\@yrhead#1{\gdef\@erhead{#1}\gdef\@orhead{#1}}
+
+\def\lfoot{\@ifnextchar[{\@xlfoot}{\@ylfoot}}
+\def\@xlfoot[#1]#2{\gdef\@elfoot{#1}\gdef\@olfoot{#2}}
+\def\@ylfoot#1{\gdef\@elfoot{#1}\gdef\@olfoot{#1}}
+
+\def\cfoot{\@ifnextchar[{\@xcfoot}{\@ycfoot}}
+\def\@xcfoot[#1]#2{\gdef\@ecfoot{#1}\gdef\@ocfoot{#2}}
+\def\@ycfoot#1{\gdef\@ecfoot{#1}\gdef\@ocfoot{#1}}
+
+\def\rfoot{\@ifnextchar[{\@xrfoot}{\@yrfoot}}
+\def\@xrfoot[#1]#2{\gdef\@erfoot{#1}\gdef\@orfoot{#2}}
+\def\@yrfoot#1{\gdef\@erfoot{#1}\gdef\@orfoot{#1}}
+
+\newdimen\headrulewidth
+\newdimen\footrulewidth
+\newdimen\plainheadrulewidth
+\newdimen\plainfootrulewidth
+\newdimen\headwidth
+\newif\if@fancyplain \@fancyplainfalse
+\def\fancyplain#1#2{\if@fancyplain#1\else#2\fi}
+
+\headrulewidth 0.5pt
+\footrulewidth 0.5pt
+\plainheadrulewidth\z@
+\plainfootrulewidth\z@
+
+\lhead[\fancyplain{}{\sl\rightmark}]{\fancyplain{}{\sl\leftmark}}
+\rhead[\fancyplain{}{\sl\leftmark}]{\fancyplain{}{\sl\rightmark}}
+\chead{}
+\lfoot{}
+\rfoot{}
+
+\def\@fancyhead#1#2#3#4#5{#1\hbox to\headwidth{\vbox{\hbox
+			{\rlap{\parbox[b]{\headwidth}{\raggedright#2\strut}}\hfill
+				\parbox[b]{\headwidth}{\centering#3\strut}\hfill
+				\llap{\parbox[b]{\headwidth}{\raggedleft#4\strut}}}\headrule}}#5}
+
+\def\@fancyfoot#1#2#3#4#5{#1\hbox to\headwidth{\vbox{\footrule
+			\hbox{\rlap{\parbox[t]{\headwidth}{\raggedright#2\strut}}\hfill
+				\parbox[t]{\headwidth}{\centering#3\strut}\hfill
+				\llap{\parbox[t]{\headwidth}{\raggedleft#4\strut}}}}}#5}
+
+\def\headrule{{\if@fancyplain\headrulewidth\plainheadrulewidth\fi
+		\hrule\@height\headrulewidth\@width\headwidth \vskip-\headrulewidth}}
+
+\def\footrule{{\if@fancyplain\footrulewidth\plainfootrulewidth\fi
+		\vskip-0.3\normalbaselineskip\vskip-\footrulewidth
+		\hrule\@width\headwidth\@height\footrulewidth\vskip0.3\normalbaselineskip}}
+
+\def\ps@fancy{
+	\let\@mkboth\markboth
+	\@ifundefined{chapter}{\def\sectionmark##1{\markboth
+			{\uppercase{\ifnum \c@secnumdepth>\z@
+					\thesection\hskip 1em\relax \fi ##1}}{}}
+		\def\subsectionmark##1{\markright {\ifnum \c@secnumdepth >\@ne
+				\thesubsection\hskip 1em\relax \fi ##1}}}
+	{\def\chaptermark##1{\markboth {\uppercase{\ifnum \c@secnumdepth>\m@ne
+					\@chapapp\ \thechapter. \ \fi ##1}}{}}
+		\def\sectionmark##1{\markright{\uppercase{\ifnum \c@secnumdepth >\z@
+					\thesection. \ \fi ##1}}}}
+	\def\@oddhead{\@fancyhead\relax\@olhead\@ochead\@orhead\hss}
+	\def\@oddfoot{\@fancyfoot\relax\@olfoot\@ocfoot\@orfoot\hss}
+	\def\@evenhead{\@fancyhead\hss\@elhead\@echead\@erhead\relax}
+	\def\@evenfoot{\@fancyfoot\hss\@elfoot\@ecfoot\@erfoot\relax}
+	\headwidth\textwidth}
+\def\ps@fancyplain{\ps@fancy \let\ps@plain\ps@plain@fancy}
+\def\ps@plain@fancy{\@fancyplaintrue\ps@fancy}
+
+
+
 
 % changes to report.sty
 
@@ -56,6 +151,9 @@
 \def\oiint{\int\hspace{-2ex}\int\hspace{-3ex}\bigcirc~}
 \def\iint{\int\hspace{-1.5ex}\int}
 \def\iiint{\int\hspace{-1.5ex}\int\hspace{-1.5ex}\int}
+
+
+
 
 \pagestyle{fancyplain}
 \lhead[\fancyplain{}{\thepage}]{\fancyplain{}{\cmu Mathematics Formulary by J.C.A. Wevers}}
