--- a/Physics_Formulary_by_Joahn_Wevers/physics.tex
+++ b/Physics_Formulary_by_Joahn_Wevers/physics.tex
@@ -1,7 +1,16 @@
 % $Id: physics.tex,v 1.30 2012/07/08 13:48:20 johanw Exp johanw $
 \mag=1000
-\documentstyle[twoside]{report}
-%\documentstyle[twoside,epsf]{report}
+\documentclass[a4paper]{report}
+	\usepackage{latexsym}
+	\usepackage{color}
+	\usepackage{hyperref}
+
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	urlcolor=red,
+	linktoc=all
+}
 
 \makeatletter
 
