--- a/Mathematics_Formulary/formulario.tex
+++ b/Mathematics_Formulary/formulario.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{report}
     % General document formatting 
     \usepackage[margin=0.5in]{geometry}
     \usepackage[parfill]{parskip}
@@ -7,12 +7,17 @@
     \usepackage{textgreek}
     \usepackage{multicol}
     \usepackage{amsmath}
+    \usepackage{amssymb}
 
 \begin{document}
 % Put your text here
-Formulario generico di Analisi e Geometria
+Mathematics Formulary
 
 \subfile{sections/calculus}
+
+\subfile{sections/geometry}
+
+\subfile{sections/probability}
 
 \subfile{sections/other}
 
