--- a/Mathematics_Formulary/sections/other.tex
+++ b/Mathematics_Formulary/sections/other.tex
@@ -2,8 +2,9 @@
     
 \begin{document}
 
-\section{Other}
-Alfabeto Greco
+\chapter{Other}
+
+\section{Greek Alphabet}
 
 \begin{multicols}{3}
 \begin{tabbing}
