--- a/Mathematics_Formulary_by_Joahn_Wevers/math.tex
+++ b/Mathematics_Formulary_by_Joahn_Wevers/math.tex
@@ -602,7 +602,7 @@ Further holds:
 \]
 
 \section{Logarithms}
-{\bf Definition}: $^a\log(x)=b\Leftrightarrow a^b=x$. For logarithms with
+{\bf Definition}: $\log_a(x)=b\Leftrightarrow a^b=x$. For logarithms with
 base $e$ one writes $\ln(x)$.
 \npar
 {\bf Rules}: $\log(x^n)=n\log(x)$, $\log(a)+\log(b)=\log(ab)$, $\log(a)-\log(b)=\log(a/b)$.
