--- a/Mathematics_Formulary/sections/calculus.tex
+++ b/Mathematics_Formulary/sections/calculus.tex
@@ -1,7 +1,4 @@
-\documentclass[../formulario.tex]{subfiles}
-    
-\begin{document}
-
+   
 \chapter{Calculus}
 
 \section{Basics}
@@ -21,7 +18,7 @@ Factorial: $ n! = \prod_{k=1}^{n}k  = \begin{cases}
 base $e$ one writes $\ln(x)$.
 
 {\bf Rules}:
-\begin{multicols}{3}
+\begin{multicols}{2}
 
  $a^{log_a(y)}=y $
  
@@ -45,22 +42,21 @@ base $e$ one writes $\ln(x)$.
 \section{Series}	
 \begin{multicols}{3}
 	
-\[ \sum_{k=1}^n k = \frac{n(n+1)}{2} \]
+$ \sum_{k=1}^n k = \frac{n(n+1)}{2} $
 
-\[ \sum_{k=1}^n (2k-1) = n^2 \]
+$ \sum_{k=1}^n (2k-1) = n^2 $
 
-\[ \sum_{k=1}^n k^2 = \frac{n(n+1)(2n+1)}{6} \]
+$ \sum_{k=1}^n k^2 = \frac{n(n+1)(2n+1)}{6} $
 
-\[ \sum_{k=1}^n k^3 = \frac{n^2(n+1)^2}{4} \]
+$ \sum_{k=1}^n k^3 = \frac{n^2(n+1)^2}{4} $
 
-\[
+$
 \sum_{k=0}^{n}q^k = \begin{cases}
                          (n+1), & \text{for } q=1\\
                          \frac{1-q^{(n+1)}}{1-q}, & \text{for } q\neq1
                     \end{cases}
-\]
+$
 	
 \end{multicols}
 
-
-\end{document}
+\multicolumn{1}
