--- a/Mathematics_Formulary/sections/geometry.tex
+++ b/Mathematics_Formulary/sections/geometry.tex
@@ -1,7 +1,3 @@
-\documentclass[../formulario.tex]{subfiles}
-    
-\begin{document}
-
 \chapter{Geometry}
 
 \section{Point, Lines}
@@ -9,4 +5,48 @@ Distance between two points $P=(x_1,y_1)$ and $Q=(x_2,y_2)$ in $\mathbb{R}^2$ : 
 
 Midpoint between P and Q: $\left(\frac{x_1+x_2}{2},\frac{y_1+y_2}{2}\right)$
 
-\end{document}
+Lines equation given one point P: $ y-y_1 = m(x-x_1) $
+
+Line equation given two points P and Q: $ y-y_1 = \frac{y_2-y_1}{x_2-x_1}(x-x_1) $
+
+Distance of one point P from the line r with equation $ax+by+c=0$ : $ d(U,r) = \frac{\left|ax_1+by_1+c\right|}{\sqrt{a^2+b^2}}$
+
+\section{Trigonometry}
+
+For the goniometric ratios for a point $p$ on the unit circle holds:
+\[
+\cos(\phi)=x_p~~,~~\sin(\phi)=y_p~~,~~\tan(\phi)=\frac{\sin(\phi)}{\cos(\phi)}
+\]
+
+\[
+\sin^2(x)+\cos^2(x)=1 \ \ , \ \ \cos^{-2}(x)=1+\tan^2(x)
+\]
+
+\[
+\cos(\frac{\pi}{2}-x)=\sin(x) \ \ , \ \ \sin(\frac{\pi}{2}-x)=\cos(x)
+\]
+\[
+\cos(\frac{\pi}{2}+x)=-\sin(x) \ \ , \ \ \sin(\frac{\pi}{2}+x)=\cos(x)
+\]
+\[
+\cos(\pi+x)=-\cos(x) \ \ , \ \ \sin(\pi+x)=-\sin(x)
+\]
+\[
+\cos(\pi-x)=-\cos(x) \ \ , \ \ \sin(\pi-x)=\sin(x)
+\]
+
+\[
+\cos(a-b)=\cos(a)\cos(b)+\sin(a)\sin(b)
+\]
+\[
+\cos(a+b)=\cos(a)\cos(b)-\sin(a)\sin(b)
+\]
+\[
+\sin(a+b)=\sin(a)\cos(b)+\cos(a)\sin(b)
+\]
+\[
+\sin(a-b)=\sin(a)\cos(b)-\cos(a)\sin(b)
+\]
+\[
+\tan(a\pm b)=\frac{\tan(a)\pm\tan(b)}{1\mp\tan(a)\tan(b)}
+\]
