--- a/Mathematics_Formulary/sections/other.tex
+++ b/Mathematics_Formulary/sections/other.tex
@@ -1,41 +1,36 @@
-\documentclass[../formulario.tex]{subfiles}
-    
-\begin{document}
-
 \chapter{Other}
 
 \section{Greek Alphabet}
 
 \begin{multicols}{3}
+
 \begin{tabbing}
-\hspace{2em} \= \hspace{3em} \= $N$ = Yet another statement \= \kill
-
-\textAlpha    \>  \textalpha    \>  alpha    \\
-\textBeta     \>  \textbeta     \>  beta     \\
-\textGamma    \>  \textgamma    \>  gamma    \\
-\textDelta    \>  \textdelta    \>  delta    \\
-\textEpsilon  \>  \textepsilon  \straightepsilon  \>  epsilon  \\
-\textZeta     \>  \textzeta     \>  zeta     \\
-\textEta      \>  \texteta      \>  eta      \\
-\textTheta    \>  \texttheta  \straighttheta   \>  theta    \\
-\textIota     \>  \textiota     \>  iota     \\
-\textKappa    \>  \textkappa    \>  kappa    \\
-\textLambda   \>  \textlambda   \>  lambda   \\
-\textMu       \>  \textmu       \>  mu       \\
-\textNu       \>  \textnu       \>  nu       \\
-\textXi       \>  \textxi       \>  xi       \\
-\textOmikron  \>  \textomikron  \>  omicron  \\
-\textPi       \>  \textpi       \>  pi       \\
-\textRho      \>  \textrho      \>  rho      \\
-\textSigma    \>  \textsigma    \>  sigma    \\
-\textTau      \>  \texttau      \>  tau      \\
-\textUpsilon  \>  \textupsilon  \>  upsilon  \\
-\textPhi      \>  \textphi  \straightphi    \>  phi      \\
-\textChi      \>  \textchi      \>  chi      \\
-\textPsi      \>  \textpsi      \>  psi      \\
-\textOmega    \>  \textomega    \>  omega    \\
-
+	\hspace{2em} \= \hspace{3em} \= $N$ = Yet another statement \= \kill
+	
+	A           \>  $\alpha$                 \>  alpha    \\
+	B           \>  $\beta$                  \>  beta     \\
+	$\Gamma$    \>  $\gamma$                 \>  gamma    \\
+	$\Delta$    \>  $\delta$                 \>  delta    \\
+	E           \>  $\epsilon \ \varepsilon$ \>  epsilon  \\
+	Z           \>  $\zeta$                  \>  zeta     \\
+	H           \>  $\eta$                   \>  eta      \\
+	$\Theta$    \>  $\theta \ \vartheta $    \>  theta    \\
+	I           \>  $\iota$                  \>  iota     \\
+	K           \>  $\kappa$                 \>  kappa    \\
+	$\Lambda$   \>  $\lambda$                \>  lambda   \\
+	M           \>  $\mu$                    \>  mu       \\
+	N           \>  $\nu$                    \>  nu       \\
+	$\Xi$       \>  $\xi$                    \>  xi       \\
+	O           \>  o                        \>  omicron  \\
+	$\Pi$       \>  $\pi \ \varpi $          \>  pi       \\
+	P           \>  $\rho$                   \>  rho      \\
+	$\Sigma$    \>  $\sigma \ \varsigma $    \>  sigma    \\
+	T           \>  $\tau$                   \>  tau      \\
+	$\Upsilon$  \>  $\upsilon$               \>  upsilon  \\
+	$\Phi$      \>  $\phi \ \varphi $        \>  phi      \\
+	X           \>  x                        \>  chi      \\
+	$\Psi$      \>  $\psi$                   \>  psi      \\
+	$\Omega$    \>  $\omega$                 \>  omega    \\
+	
 \end{tabbing}
 \end{multicols}
-
-\end{document}
