Restructor articles order and add definitions

--- a/Mathematics_Formulary/formulario.tex
+++ b/Mathematics_Formulary/formulario.tex
@@ -46,9 +46,15 @@
 \fancyhead[OR]{\nouppercase\rightmark}
 \fancyhead[ER,OL]{\thepage}
 
-\input{sections/calculus}
+\input{sections/elementary}
+
+\input{sections/algebra}
 
 \input{sections/geometry}
+
+\input{sections/linear_algebra}
+
+\input{sections/calculus}
 
 \input{sections/probability}
 
