--- a/Mathematics_Formulary/sections/calculus.tex
+++ b/Mathematics_Formulary/sections/calculus.tex
@@ -1,45 +1,34 @@
-   
 \chapter{Calculus}
+\textbf{Definition:} Calculus (from Latin calculus, literally 'small pebble', used for counting and calculations, as on an abacus) is the mathematical study of continuous change. It has two major branches:
+\begin{itemize}  
+	\item \textbf{differential calculus:} concerning rates of change and slopes of curves;
+	\item \textbf{integral calculus:} concerning accumulation of quantities and the areas under and between curves
+\end{itemize}
+These two branches are related to each other by the fundamental theorem of calculus. 
 
-\section{Basics}
 
-Absolute value function: $ \left|x\right| = max\{x,-x\} = \sqrt{x^2} = \begin{cases}
-																		x & \text{if } x\geq0\\
-																		-x & \text{if } x<0
-																	\end{cases} $
 
-Factorial: $ n! = \prod_{k=1}^{n}k  = \begin{cases}
-										a_0 &= 1\\
-										a_{n+1} &= (n+1)a_n \ \forall n \in \mathbb{N}
-										\end{cases} $
 
-\section{Logarithms}
-{\bf Definition}: $a^x=y\Leftrightarrow\log_a(y)=x $. For logarithms with
-base $e$ one writes $\ln(x)$.
 
-{\bf Rules}:
-\begin{multicols}{2}
+\section{Differential calculus}
+\textbf{Definition:} In mathematics, differential calculus is a subfield of calculus concerned with the study of the rates at which quantities change.
 
- $a^{log_a(y)}=y $
- 
- $\log_a(a^x)=x$
- 
- $\log_a(1)=0$
- 
- $\log_a(x^n)=n\log_a(x)$
 
- $\log_a(b)=\frac{1}{\log_b(a)}$
- 
- $\log_a(\frac{1}{x})=-\log_a(x)$
-  
- $\log_a(c)+\log_a(b)=\log_a(cb)$
- 
- $\log_a(c)-\log_a(b)=\log_a(c/b)$.
- 
-\end{multicols}
+
+
+
+\section{Integral Calculus}
+\textbf{Definition:} In mathematics, Integral calculus is a subfield of calculus in which the notion of an integral, its properties and methods of calculation are studied. It concerns accumulation of quantities and the areas under and between curves.
+
+
+
 
 
 \section{Series}	
+\textbf{Definition:} In mathematics, a series is, roughly speaking, a description of the operation of adding infinitely many quantities, one after the other, to a given starting quantity.
+
+
+
 \begin{multicols}{3}
 	
 $ \sum_{k=1}^n k = \frac{n(n+1)}{2} $
@@ -58,5 +47,3 @@ $
 $
 	
 \end{multicols}
-
-\multicolumn{1}
