Restructor articles order and add definitions

--- a/Mathematics_Formulary/formulario.tex
+++ b/Mathematics_Formulary/formulario.tex
@@ -46,7 +46,7 @@
 \fancyhead[OR]{\nouppercase\rightmark}
 \fancyhead[ER,OL]{\thepage}
 
-\input{sections/elementary}
+\input{sections/arithmetic}
 
 \input{sections/algebra}
 
