--- a/Mathematics_Formulary/sections/arithmetic.tex
+++ b/Mathematics_Formulary/sections/arithmetic.tex
@@ -1,4 +1,5 @@
-\chapter{Basics}
+\chapter{Arithmetic}
+\textbf{Definition:} Arithmetic (from the Greek arithmos, "number") is a branch of mathematics that consists of the study of numbers, especially the properties of the traditional operations on them.
 
 \section{Numbers}
 
