Add polinomials identities

--- a/Mathematics_Formulary/sections/algebra.tex
+++ b/Mathematics_Formulary/sections/algebra.tex
@@ -1,5 +1,42 @@
 \chapter{Algebra}
 
+\section{Polynomial}
+Short multiplication formulas:
+$$(x + y)^2 = x^2 + 2xy + y^2$$
+$$(x - y)^2 = x^2 - 2xy + y^2$$ 
+$$(x + y + z)^2 = x^2 + y^2 + z^2 + 2xy + 2yz + 2zx$$ 
+$$(x - y + z)^2 = x^2 + y^2 + z^2 - 2xy - 2yz + 2zx$$ 
+
+Consequences of the above formulas:
+$$(-x + y)^2 = (y - x)^2 = y^2 - 2xy + x^2$$
+$$(-x - y)^2 = (-(x + y))^2 = (x + y)^2 = x2 + 2xy + y2$$
+
+Formulas for 3rd degree:
+$$(x + y)^3 = x^3 + y^3 + 3xy(x + y) = x^3 + 3x^2y + 3xy^2 + y^3$$
+$$(x - y)^3 = x^3 - y^3 - 3xy(x - y) = x^3 - 3x^2y + 3xy^2 - y^3$$
+
+Factor Rules:
+$$x^2 - y^2 = (x - y)(x + y)$$
+$$x^2 + y^2 = (x + y)^2 - 2xy = (x - y)^2 + 2xy$$
+$$x^3 - y^3 = (x - y)(x^2 + xy + y^2)$$
+$$x^3 + y^3 = (x + y)(x^2 - xy + y^2)$$
+
+More Algebraic Formulas:
+$$2(x^2 + y^2) = (x + y)^2 + (x - y)^2$$
+$$(x + y)^2 - (x - y)^2 = 4xy$$
+$$(x - y)^2 = (x + y)^2 - 4xy$$
+$$x^4 + y^4 = (x + y)(x - y)[(x + y)^2 - 2xy]$$
+
+Factoring trinomials:
+$$ ax^{2n} + bx^n + c = (ax^n + r)(x^n + \frac{s}{a}) ~~ \text{with} ~ \begin{cases} 
+                                                                  r + s = b \\
+                                                                  r \times s = ac
+                                                                 \end{cases}
+$$
+
+Newton's binomial formula:
+\[ (x+y)^n = \sum_{k=0}^{n}\binom{n}{k}x^ky^{n-k} \]
+
 \section{Equations TODO}
 
 \section{Inequities TODO}
