Add polinomials identities

--- a/Mathematics_Formulary/sections/algebra.tex
+++ b/Mathematics_Formulary/sections/algebra.tex
@@ -34,6 +34,11 @@ $$ ax^{2n} + bx^n + c = (ax^n + r)(x^n + \frac{s}{a}) ~~ \text{with} ~ \begin{ca
                                                                  \end{cases}
 $$
 
+Polynomial remainder theorem (the remainder of the division of a polynomial $f(x)$ by a linear polynomial ${(x-a)}$ is equal to $f(a)$:
+
+$$ f(x) = (x-a)q(x) + r(x) \implies f(a) = r(x) $$
+
+
 Newton's binomial formula:
 \[ (x+y)^n = \sum_{k=0}^{n}\binom{n}{k}x^ky^{n-k} \]
 
