Add quadratic equations solution

--- a/Mathematics_Formulary/sections/algebra.tex
+++ b/Mathematics_Formulary/sections/algebra.tex
@@ -37,6 +37,8 @@ $$
 Newton's binomial formula:
 \[ (x+y)^n = \sum_{k=0}^{n}\binom{n}{k}x^ky^{n-k} \]
 
-\section{Equations TODO}
+\section{Equations}
+Quadratic equation solution:
+$$ ax^2 + bx + c = 0 \rightarrow (x - x1)(x - x2) = 0 ~\text{with}~ x_{1,2}=\frac{-b\pm\sqrt{b^2-4ac}}{2a}$$
 
 \section{Inequities TODO}
