Add common angles

--- a/Mathematics_Formulary/sections/geometry.tex
+++ b/Mathematics_Formulary/sections/geometry.tex
@@ -80,3 +80,62 @@ Double angle formulas:
 \[
 \sin(2x) = 2\sin(x)\cos(x) \ , \ \cos(2x)=\cos^2(x)-\sin^2(x) = 2\cos^2(x)-1 = 1 - 2\sin^2(x)
 \]
+
+\subsection{Conversions of common angles}
+\begin{tabular}{  | c | c || c | c | c | c | }
+	\hline
+	Degrees          & Radians              & Sin                               & Cos                                               & Tan                                    & Cot               \\
+	\hline
+    $0^{\circ}$      & 0                    & 0                                 &  1                                                & 0                                      & $\pm\infty$        \\
+    \hline	
+    $15^{\circ}$     & $\frac{\pi}{12}$     & $\frac{\sqrt{6}-\sqrt{2}}{4}$       &  $\frac{\sqrt{6}+\sqrt{2}}{4}$                      & $2-\sqrt{3}$                            & $2+\sqrt{3}$       \\
+    \hline
+    $18^{\circ}$     & $\frac{\pi}{10}$     & $\frac{\sqrt{5}-1}{4}$          &   $\sqrt{ \frac{5}{8} + \frac{\sqrt{5}}{8} }$     &  $\sqrt{ \frac{1}{5}(5-2\sqrt{5})}$    &  $\sqrt{ 5+2\sqrt{5}}$  \\
+    \hline		
+    $30^{\circ}$     & $\frac{\pi}{6}$     & $\frac{1}{2}$      &   $\frac{\sqrt{3}}{2} $     &  $\frac{\sqrt{3}}{3}$    &  $\sqrt{3}$  \\
+    \hline		
+    $45^{\circ}$     & $\frac{\pi}{4}$     & $\frac{\sqrt{2}}{2}$   &   $\frac{\sqrt{2}}{2}$    &  1    &  1  \\
+    \hline		
+    $60^{\circ}$     & $\frac{\pi}{3}$     & $\frac{\sqrt{3}}{2}$   &   $\frac{1}{2}$    &  $\sqrt{3}$    &  $\frac{\sqrt{3}}{3}$  \\
+    \hline		
+    $75^{\circ}$     & $\frac{5}{12}\pi$     & $\frac{\sqrt{6}+\sqrt{2}}{4}$   &   $\frac{\sqrt{6}-\sqrt{2}}{4}$    &  $2+\sqrt{3}$    &  $2-\sqrt{3}$  \\
+    \hline
+    $90^{\circ}$     & $\frac{\pi}{2}$     & 1   &   0    &  $\pm\infty$   &  0  \\
+    \hline
+   	$105^{\circ}$     & $\frac{7}{12}\pi$     & $\frac{\sqrt{6}+\sqrt{2}}{4}$   &   $\frac{\sqrt{2}-\sqrt{6}}{4}$    &  $-2-\sqrt{3}$    &  $\sqrt{3}-2$  \\
+    \hline
+    $120^{\circ}$     & $\frac{2}{3}\pi$     & $\frac{\sqrt{3}}{2}$      &   $-\frac{1}{2} $     &  $-\sqrt{3}$    &  $-\frac{\sqrt{3}}{3}$  \\
+    \hline	
+  	$135^{\circ}$     & $\frac{3}{4}\pi$     & $\frac{\sqrt{2}}{2}$   &   $-\frac{\sqrt{2}}{2}$    &  -1    &  -1  \\
+  	\hline
+  	$150^{\circ}$     & $\frac{5}{6}\pi$     & $\frac{1}{2}$      &   $-\frac{\sqrt{3}}{2}$     &  $-\frac{\sqrt{3}}{3}$    &  $-\sqrt{3}$  \\
+  	\hline	
+    $165^{\circ}$     & $\frac{11}{12}\pi$   & $\frac{\sqrt{6}-\sqrt{2}}{4}$       &  -$\frac{\sqrt{6}+\sqrt{2}}{4}$     & $\sqrt{3}-2$   & $-\sqrt{3}-2$       \\
+    \hline
+    $180^{\circ}$     & $\pi$     & 0   &   -1   &  0    &  $\pm\infty$  \\
+    \hline
+	$195^{\circ}$     & $\frac{13}{12}\pi$   & $\frac{\sqrt{2}-\sqrt{6}}{4}$       &  -$\frac{\sqrt{6}+\sqrt{2}}{4}$     & $2-\sqrt{3}$   & $2+\sqrt{3}$       \\
+	\hline
+	$210^{\circ}$     & $\frac{7}{6}\pi$     & $-\frac{1}{2}$      &   $-\frac{\sqrt{3}}{2}$     &  $\frac{\sqrt{3}}{3}$    &  $\sqrt{3}$  \\
+	\hline
+  	$225^{\circ}$     & $\frac{5}{4}\pi$     & $-\frac{\sqrt{2}}{2}$      &   $-\frac{\sqrt{2}}{2}$     &  1    &  1  \\
+  	\hline	
+  	$240^{\circ}$     & $\frac{4}{3}\pi$     & $-\frac{\sqrt{3}}{2}$      &   $-\frac{1}{2}$     &  $\sqrt{3}$    &  $\frac{\sqrt{3}}{3}$  \\
+  	\hline
+     $255^{\circ}$     & $\frac{17}{12}\pi$   & $-\frac{\sqrt{6}+\sqrt{2}}{4}$       &  $\frac{\sqrt{2}-\sqrt{6}}{4}$     & $2+\sqrt{3}$   & $2-\sqrt{3}$       \\
+     \hline
+     $270^{\circ}$     & $\frac{3}{2}\pi$     & -1      &   0    &  $\pm\infty$    &  0  \\
+     \hline	
+    $285^{\circ}$     & $\frac{19}{12}\pi$   & $-\frac{\sqrt{6}+\sqrt{2}}{4}$       &  $\frac{\sqrt{6}-\sqrt{2}}{4}$     & $-2-\sqrt{3}$   & $\sqrt{3}-2$       \\
+    \hline
+    $300^{\circ}$     & $\frac{5}{3}\pi$     & $-\frac{\sqrt{3}}{2}$      &   $\frac{1}{2}$     &  $-\sqrt{3}$    &  $-\frac{\sqrt{3}}{3}$  \\
+    \hline	
+    $315^{\circ}$     & $\frac{7}{4}\pi$     & $-\frac{\sqrt{2}}{2}$      &   $\frac{\sqrt{2}}{2}$     &  -1   &  -1  \\
+    \hline	
+    $330^{\circ}$     & $\frac{11}{6}\pi$     & $-\frac{1}{2}$      &   $\frac{\sqrt{3}}{2}$     &  -$\frac{\sqrt{3}}{3}$   &  $-\sqrt{3}$  \\
+    \hline	
+     $345^{\circ}$     & $\frac{23}{12}\pi$     & $\frac{\sqrt{2}-\sqrt{6}}{4}$       &  $\frac{\sqrt{2}+\sqrt{6}}{4}$    &  $\sqrt{3}-2$    &  $-2-\sqrt{3}$  \\
+     \hline	
+     $360^{\circ}$     & $2\pi$   & 0       &  1     & 0   & $\pm\infty$       \\
+     \hline
+\end{tabular}
