--- a/Mathematics_Formulary/sections/algebra.tex
+++ b/Mathematics_Formulary/sections/algebra.tex
@@ -35,9 +35,7 @@ $$ ax^{2n} + bx^n + c = (ax^n + r)(x^n + \frac{s}{a}) ~~ \text{with} ~ \begin{ca
 $$
 
 Polynomial remainder theorem (the remainder of the division of a polynomial $f(x)$ by a linear polynomial ${(x-a)}$ is equal to $f(a)$:
-
 $$ f(x) = (x-a)q(x) + r(x) \implies f(a) = r(x) $$
-
 
 Newton's binomial formula:
 \[ (x+y)^n = \sum_{k=0}^{n}\binom{n}{k}x^ky^{n-k} \]
@@ -45,5 +43,14 @@ Newton's binomial formula:
 \section{Equations}
 Quadratic equation solution:
 $$ ax^2 + bx + c = 0 \rightarrow (x - x1)(x - x2) = 0 ~\text{with}~ x_{1,2}=\frac{-b\pm\sqrt{b^2-4ac}}{2a}$$
+
+Rational root theorem (or rational root test, rational zero theorem, rational zero test or p/q theorem): 
+$$
+\text{given } a_nx+^n+...+a_0=0 \rightarrow \text{ solutions are in the form } x=\frac{p}{q} \text{ with } \begin{cases}
+p \text{ a factor of } a_0 \\
+q \text{ a factor of } a_n
+\end{cases}
+$$
+
 
 \section{Inequities TODO}
