--- a/Mathematics_Formulary/sections/calculus.tex
+++ b/Mathematics_Formulary/sections/calculus.tex
@@ -7,8 +7,73 @@
 These two branches are related to each other by the fundamental theorem of calculus. 
 
 
+\section{Limits}
+\[
+\lim_{x\rightarrow\pm\infty}P(x)=\lim_{x\rightarrow\pm\infty}a_nx^x=\pm\infty
+\]
+\[
+\lim_{x\rightarrow\pm\infty}\frac{P(x)}{Q(x)}=\lim_{x\rightarrow\pm\infty}\frac{a_nx^x}{b_mx^m}=\lim_{x\rightarrow\pm\infty}\frac{a_n}{b_m}x^{n-m}=
+\begin{cases}
+	\infty & \text{if } n>m \\
+	\frac{a_n}{b_m} & \text{if } n=m \\
+	0 & \text{if } n<m \\
+\end{cases}
+\]
 
+\[
+\lim_{x\rightarrow0}\frac{\sin(x)}{x}=1 ~~,~~ \lim_{x\rightarrow0}\frac{1-\cos(x)}{x^2}=\frac{1}{2}
+\]
 
+\[
+\lim_{x\rightarrow0}\frac{\tan(x)}{x}=1 ~~,~~ \lim_{x\rightarrow0}\frac{\arcsin(x)}{x}=1
+\]
+
+\[
+\lim_{x\rightarrow0}\frac{\log_a(x+1)}{x}=\frac{1}{\ln(a)} ~~ (a>0) ~~,~~
+\lim_{x\rightarrow0}\frac{\ln(x+a)}{x}=a
+\]
+
+\[
+\lim_{x\rightarrow+\infty}x^\alpha=+\infty ~~,~~ \lim_{x\rightarrow0^+}x^\alpha=0 ~~~~ \alpha>0
+\]
+\[
+\lim_{x\rightarrow+\infty}x^\alpha=0 ~~,~~ \lim_{x\rightarrow0^+}x^\alpha=+\infty ~~~~ \alpha<0
+\]
+\[
+\lim_{x\rightarrow0}\frac{a^x-1}{x}=ln(a) ~~,~~ \lim_{x\rightarrow0}\frac{e^x-1}{x}=1
+\]
+
+\[
+\lim_{x\rightarrow+\infty}a^x=+\infty ~~,~~ \lim_{x\rightarrow-\infty}a^x=0 ~~~~ a>1
+\]
+\[
+\lim_{x\rightarrow+\infty}a^x=0 ~~,~~ \lim_{x\rightarrow-\infty}a^x=+\infty ~~~~ a<1
+\]
+
+\[
+\lim_{x\rightarrow+\infty}\log_ax=+\infty ~~,~~ \lim_{x\rightarrow0^+}\log_ax=-\infty ~~~~ a>1
+\]
+\[
+\lim_{x\rightarrow+\infty}\log_ax=-\infty ~~,~~ \lim_{x\rightarrow0^+}\log_ax=+\infty ~~~~ a<1
+\]
+
+\[
+\lim_{x\rightarrow0}(1+x)^{1/x}={\rm e}~~,~~
+\lim_{x\rightarrow\infty}\left(1+\frac{n}{x}\right)^x={\rm e}^n
+\]
+\[
+\lim_{x\rightarrow\infty}\frac{x^p}{a^x}=0~~\mbox{als }|a|>1 ~~,~~
+\lim_{x\rightarrow0}\frac{(1+x)^\alpha-1}{x}=\alpha ~~~ (a\in\mathbb{R})
+\]
+\[
+\lim_{x\rightarrow0}\left(a^{1/x}-1\right)=\ln(a)~~,~~
+\lim_{x\rightarrow\infty}\sqrt[x]{x}=1
+\]
+
+\subsubsection{Substitution rule}
+\[
+\text{given  } \lim_{x\rightarrow c}f(x)=l \text{   then   } \lim_{x\rightarrow c}g(f(x))=\lim_{y\rightarrow l}g(y) 
+\]
 
 \section{Differential calculus}
 \textbf{Definition:} In mathematics, differential calculus is a subfield of calculus concerned with the study of the rates at which quantities change.
