--- a/Mathematics_Formulary/sections/arithmetic.tex
+++ b/Mathematics_Formulary/sections/arithmetic.tex
@@ -29,7 +29,7 @@ Exponentiation is a mathematical operation, written as $b^n$, involving two numb
 
 Properties:
 \[
-a^0=1 \ \ , \ \ a^{x+y}=a^xa^y \ , \ \ a^{x-y}=\frac{a^x}{a^y} \ , \ \ (a^x)^y=a^{xy} \ , \ \ (ab)^n = a^nb^n
+a^0=1 \ \ , \ \ a^{x+y}=a^xa^y \ , \ \ a^{x-y}=\frac{a^x}{a^y} \ , \ \ (a^x)^y=a^{xy} \ , \ \ (ab)^n = a^nb^n \ \ , \ \ a^{\frac{x}{y}}=\sqrt[y]{a^x}
 \]
 
 \section{Logarithm}
